# coding: utf-8
[metadata]
name = url64
version = 0.0.2
description = url64 decode/encode for python
long_description = file: README.md
long_description_content_type = text/markdown
author = Puria Nafisi Azizi
author_email = puria@dyne.org
project_urls =
    Source Code = https://github.com/puria/url64
url = https://github.com/puria/url64
license = Apache-2.0
license_file = LICENSE
keywords = serialization url64 encoder decoder
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python

[options]
packages = find:
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-cov
    codecov

[options.extras_require]
test =
    pytest
    pytest-cov

[tool:pytest]
addopts = -v -rsx --cov=./ --cov-report=xml
testpaths = tests

[coverage:run]
source = url64

[coverage:report]
show_missing = true

[flake8]
ignore = E501
max-line-length = 99
exclude = .tox,build,docs

[bdist_wheel]
universal = 1

[aliases]
test=pytest
